--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "http://www.example.com"
-title = "Minimo"
+title = "JanusRNA"
 # for smart copyright line, leave this blank and check [params.copyright]
 copyright = ""
 
@@ -22,7 +22,7 @@ enableEmoji = true
 defaultContentLanguage = "en"
 
 [params.info]
-description = "Minimalist theme for Hugo"
+description = "JanusRNA Project"
 title404 = "Nothing's here!"
 
 [params.assets]
@@ -33,8 +33,8 @@ gopher = "" # used in 404 template ( Generator: https://gopherize.me )
 
 [params.copyright]
 prefix = ""
-holder = "MunifTanjim"
-startYear = "2017"
+holder = "Kreftregisteret Bioinformatics"
+startYear = "2019"
 suffix = ""
 
 [params.settings]
@@ -47,7 +47,7 @@ hideEntryMeta = ["page"] # boolean / array of sections
 showReadingTime = true
 showLastmod = true
 taxonomyCloudShuffle = true
-accentColor = "#ffcd00"
+accentColor = "#6BA4B8"
 hideMainMenu = false
 
 [params.sidebar]
@@ -65,24 +65,24 @@ appID = ""
 pageID = ""
 
 [params.opengraph.twitter]
-page = "" # Twitter page username
+page = "sinanugur" # Twitter page username
 
 [params.seo]
 # Title Separator: - – — · • * ⋆ | ~ « » < >
 titleSeparator = "•"
 
 [params.social]
-codepen = "MunifTanjim"
-email = "contact@example.com"
-facebook = "MunifTanjim"
-github = "MunifTanjim"
-gitlab = "MunifTanjim"
-instagram = "MunifTanjim"
-linkedin = "muniftanjim"
-twitter = "MunifTanjim"
-telegram = "MunifTanjim"
-google_scholar = "qc6CJjYAAAAJ"
-youtube = "UCT-U0rNerYxItGcuoPX-WYA"
+#codepen = ""
+email = "sinanugur@gmail.com"
+#facebook = ""
+github = "sinanugur"
+gitlab = "sinanugur"
+#instagram = ""
+#linkedin = ""
+twitter = "sinanugur"
+#telegram = ""
+#google_scholar = "eCJhaHoAAAAJ"
+#youtube = ""
 
 [params.comments]
 enable = false
@@ -97,8 +97,8 @@ dataAttrs = "" # "data-isso='https://isso.example.com' data-isso-require-author=
 enable = true
 apiEndpoint = "https://api.staticman.net/v2/entry"
 maxDepth = 2
-username = "MunifTanjim"
-repository = "minimo"
+username = "sinanugur"
+repository = "JanusRNA"
 branch = "master"
 
 # Utterances: https://utteranc.es
@@ -107,8 +107,8 @@ enable = false
 issueTerm = "pathname" # pathname / url / title
 
 [params.comments.utterances.github]
-username = "MunifTanjim"
-repository = "minimo"
+username = "sinanugur"
+repository = "JanusRNA"
 
 [params.search]
 client = "fuse" # algolia / fuse / lunr
@@ -131,7 +131,7 @@ page = "/:slug/"
 name = "Repo"
 weight = -10
 identifier = "repository"
-url = "https://github.com/MunifTanjim/minimo"
+url = "https://github.com/sinanugur/JanusRNA"
 
 [blackfriday]
 hrefTargetBlank = true
